--- a/springBootBook/pom.xml
+++ b/springBootBook/pom.xml
@@ -44,6 +44,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+		    <groupId>oracle</groupId>
+		    <artifactId>ojdbc8</artifactId>
+		    <version>12.1.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
