--- a/springBootBook/src/main/resources/application.properties
+++ b/springBootBook/src/main/resources/application.properties
@@ -1,1 +1,22 @@
+spring.datasource.url=jdbc:oracle:thin:@localhost:1522:XE
+
+spring.datasource.username=sbook
+spring.datasource.password=Sbook123
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+
+spring.jpa.show-sql=true
+
+#To beautify or pretty print the SQL, we can add:
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.hibernate.ddl-auto=create
+
+spring.data.rest.base-path=/api/v1
+
+
+
+
+server.port=8082
 
